--- a/code/professor/pstyles.css
+++ b/code/professor/pstyles.css
@@ -21,7 +21,7 @@ div.menu {
 	margin-right: 10%;
 	margin-left: 10%;
 }
-div.container {
+div.chapter_container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
