--- a/code/learner/lstyles.css
+++ b/code/learner/lstyles.css
@@ -42,7 +42,7 @@ div.main {
 	margin-left: 10%;
 	margin-right: 10%;
 }
-div.container {
+div.chapter_container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
