--- a/code/learner/lstyles.css
+++ b/code/learner/lstyles.css
@@ -42,6 +42,9 @@ div.main {
 	margin-left: 10%;
 	margin-right: 10%;
 }
+.big {
+	font-size: 107%;
+}
 div.chapter_container {
 	display: flex;
 	flex-wrap: wrap;
