--- a/code/learner/lstyles.css
+++ b/code/learner/lstyles.css
@@ -118,7 +118,7 @@ div.chapter_image_left {
 div.chapter_text {
 	width: 70%;
 }
-div.source_container {
+div.source {
 	width: 100%;
 	height: 150px;
 	overflow: scroll;
