--- a/code/professor/pstyles.css
+++ b/code/professor/pstyles.css
@@ -21,7 +21,7 @@ div.menu {
 	margin-right: 10%;
 	margin-left: 10%;
 }
-div.chapter_container {
+div.container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -49,7 +49,7 @@ div.main {
 p.center {
 	text-align: center;
 }
-div.source_container {
+div.source {
 	width: 100%;
 	height: 150px;
 	overflow: scroll;
