--- a/code/styles.css
+++ b/code/styles.css
@@ -52,7 +52,7 @@ input {
 }
 @media only screen and (max-width: 1100px) {
 	div.main {
-		margin-left: 0%;
-		margin-right: 0%;
+		margin-left: 0;
+		margin-right: 0;
 	}
 }
