--- a/code/professor/pstyles.css
+++ b/code/professor/pstyles.css
@@ -27,12 +27,12 @@ div.container {
 	align-items: flex-start;
 }
 span.active {
-	padding: 0% 4%;
+	padding: 0 4%;
 	background-color: #FFFFFF;
 }
 span.menup {
 	border: 1px solid #000000;
-	padding: 0% 4%;
+	padding: 0 4%;
 	background-color: #ff6666;
 	cursor: pointer;
 }
@@ -119,7 +119,7 @@ textarea {
 	font-size: 140%;
 }
 p {
-	margin:0;
+	margin: 0;
 }
 p.text {
 	line-height: 1.5;
@@ -146,11 +146,11 @@ a.link_to_page:hover {
 }
 @media only screen and (max-width: 1400px) {
 	div.main {
-		margin-left: 0%;
-		margin-right: 0%;
+		margin-left: 0;
+		margin-right: 0;
 	}
 	div.menu {
-		margin-right: 0%;
-		margin-left: 0%;
+		margin-right: 0;
+		margin-left: 0;
 	}
 }
