--- a/code/learner/lstyles.css
+++ b/code/learner/lstyles.css
@@ -3,14 +3,14 @@
 }
 
 body {
-	background-color: #3399ff;
+	background-color: royalblue;
 	font-family: "Verdana";
 	font-size: 140%;
 	margin: 0;
 }
 
 p {
-	margin:0;
+	margin: 0;
 }
 
 a {
@@ -18,16 +18,16 @@ a {
 }
 
 a:visited {
-	color:  #0000FF;
+	color: blue;
 }
 
 a:hover {
-	color: #ff0000;
+	color: red;
 }
 
 button {
-	background-color: #99ff33;
-	border: 1px solid #000000;
+	background-color: greenyellow;
+	border: 1px solid black;
 	font-size: 90%;
 	padding: 7px;
 	margin-top: 10px;
@@ -71,13 +71,13 @@ div.menu {
 span.active {
 	padding: 0 3%;
 	display: inline;
-	background-color: #FFFFFF;
+	background-color: white;
 }
 
 span.menul {
-	border: 1px solid #000000;
+	border: 1px solid black;
 	padding: 0 3%;
-	background-color: #ff6666;
+	background-color: lightcoral;
 	transition: padding 0.5s;
 }
 
@@ -87,7 +87,7 @@ span.menul:hover {
 }
 
 div.main {
-	background-color: #ffffff;
+	background-color: white;
 	padding: 2%;
 	margin-left: 10%;
 	margin-right: 10%;
@@ -103,6 +103,7 @@ div.container {
 	justify-content: space-between;
 	align-items: flex-start;
 }
+
 div.message_header {
 	width: 30%;
 	margin-left: 1%;
@@ -114,13 +115,11 @@ div.message_box {
 }
 
 div.not_seen_message_box {
-	padding: 1%;
-	background-color: #ffffcc;
-	cursor: pointer;
+	background-color: lightgoldenrodyellow;
 }
 
 div.not_seen_message_box:hover {
-	background-color: #ffffff;
+	background-color: white;
 }
 
 div.message_info {
@@ -129,14 +128,14 @@ div.message_info {
 
 img.default_profile_photo {
 	width: 20%;
-	border: 1px solid #000000;
+	border: 1px solid black;
 	border-radius: 10px;
 }
 
 img.profile_photo {
 	width: 25%;
 	padding: 1%;
-	border: 1px solid #000000;
+	border: 1px solid black;
 	border-radius: 10px;
 }
 
@@ -157,15 +156,14 @@ img.user_profile_photo:hover {
 p.center {
 	text-align: center;
 }
-div.seen_notification {
+
+div.notification {
 	padding: 1%;
 	margin-bottom: 1%;
 }
 
 div.not_seen_notification {
-	padding: 1%;
-	margin-bottom: 1%;
-	background-color: #ffffcc;
+	background-color: lightgoldenrodyellow;
 }
 
 div.view_users_container {
@@ -190,14 +188,14 @@ div.source {
 	width: 100%;
 	height: 150px;
 	overflow: scroll;
-	border: 1px solid #000000;
+	border: 1px solid black;
 }
 
 div.group_chat {
 	width: 100%;
 	height: 250px;
 	overflow: scroll;
-	border: 1px solid #000000;
+	border: 1px solid black;
 }
 
 img.chapter_image {
@@ -210,15 +208,15 @@ p.text {
 }
 
 span.red_letters {
-	color: #cc0000;
+	color: red;
 }
 
 a.link_to_page {
-	color: #000000;
+	color: black;
 }
 
 a.link_to_page:hover {
-	color: #000000;
+	color: black
 }
 
 .not_displayed {
