--- a/code/professor/pstyles.css
+++ b/code/professor/pstyles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	background-color: #3399ff;
+	background-color: royalblue;
 	font-family: "Verdana";
 	font-size: 140%;
 	margin: 0;
@@ -31,15 +31,14 @@ p {
 
 a {
 	text-decoration: none;
-	color:  #0000FF;
 }
 
 a:visited {
-	color:  #0000FF;
+	color: blue;
 }
 
 a:hover {
-	color: #ff0000;
+	color: red;
 }
 
 button.logout {
@@ -67,18 +66,18 @@ div.container {
 
 span.active {
 	padding: 0 4%;
-	background-color: #FFFFFF;
+	background-color: white;
 }
 
 span.menup {
-	border: 1px solid #000000;
+	border: 1px solid black;
 	padding: 0 4%;
-	background-color: #ff6666;
+	background-color: lightcoral;
 	cursor: pointer;
 }
 
 div.main {
-	background-color: #ffffff;
+	background-color: white;
 	padding: 2%;
 	margin-left: 10%;
 	margin-right: 10%;
@@ -96,14 +95,14 @@ div.source {
 	width: 100%;
 	height: 150px;
 	overflow: scroll;
-	border: 1px solid #000000;
+	border: 1px solid black;
 }
 
 div.group_chat {
 	width: 100%;
 	height: 300px;
 	overflow: scroll;
-	border: 1px solid #000000;
+	border: 1px solid black;
 }
 
 div.message_header {
@@ -118,20 +117,19 @@ div.message_box {
 }
 
 div.not_seen_message_box {
-	padding: 1%;
-	margin-bottom: 1%;
-	background-color: #ffffcc;
+	background-color: lightgoldenrodyellow;
 	cursor: pointer;
 }
 
 div.not_seen_message_box:hover {
-	background-color: #ffffff;
+	background-color: white;
 }
 
 div.list_container {
 	display: flex;
-	border-bottom: 1px solid #000000;
+	border-bottom: 1px solid black;
 }
+
 div.list {
 	text-align: center;
 	padding: 1%;
@@ -143,7 +141,7 @@ div.message_info {
 }
 
 span.red_letters {
-	color: #cc0000;
+	color: red;
 }
 
 .not_displayed {
@@ -172,11 +170,11 @@ textarea.form_chapter_text {
 }
 
 a.link_to_page {
-	color: #000000;
+	color: black;
 }
 
 a.link_to_page:hover {
-	color: #000000;
+	color: black;
 }
 
 
