--- a/code/learner/lstyles.css
+++ b/code/learner/lstyles.css
@@ -202,6 +202,21 @@ img.chapter_image {
 	width: 100%;
 }
 
+div.embedded_container {
+	position: relative;
+	overflow: hidden;
+	padding-top: 56.25%;
+}
+
+iframe.resp_iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 50%;
+	border: 0;
+}
+
 p.text {
 	line-height: 1.5;
 	text-indent: 50px;
@@ -233,5 +248,12 @@ a.link_to_page:hover {
 	div.menu {
 		margin-right: 0;
 		margin-left: 0;
+	}
+}
+
+@media only screen and (max-width: 1000px) {
+	iframe.resp_iframe {
+		width: 100%;
+		height: 100%;
 	}
 }
