--- a/code/learner/lstyles.css
+++ b/code/learner/lstyles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	background-color: royalblue;
+	background-color: dodgerblue;
 	font-family: "Verdana";
 	font-size: 140%;
 	margin: 0;
